// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout actions should changeIsNavOpen 1`] = `
Object {
  "payload": Object {
    "isNavOpen": false,
  },
  "type": "LAYOUT_CHANGE_IS_NAV_OPEN",
}
`;

exports[`Layout actions should hideLoading 1`] = `
Object {
  "type": "LAYOUT_HIDE_LOADING",
}
`;

exports[`Layout actions should initialize the layout 1`] = `
Object {
  "payload": Object {
    "isNavOpen": undefined,
    "items": "some items",
    "location": "loc2",
    "organization": "org1",
  },
  "type": "LAYOUT_INITIALIZE",
}
`;

exports[`Layout actions should showLoading 1`] = `
Object {
  "type": "LAYOUT_SHOW_LOADING",
}
`;
